04/zad2/odoo-deployment-quickstart.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: odoo-deployment
  namespace: odoo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: odoo
  template:
    metadata:
      labels:
        app: odoo
    spec:
      containers:
      - name: odoo
        image: odoo:19
##########
# TO NIE JEST KOMPLETNY Deployment - TO JEST FRAGMENT BY POMÓC CI RUSZYĆ Z MIEJSCA.
##########
# TLDR; Odoo wymaga inicjalizacji bazy danych przed uruchomieniem głównego kontenera.
# Dlatego w tym pliku dodaliśmy initContainer, który wykonuje tę inicjalizację.
# Stwórz nowy plik odoo-deployment.yaml i przekopiuj tam zawartość tego pliku (bez komentarzy).
# Dodaj odpowiednie zmienne środowiskowe do głównego kontenera
# Na koniec - stwórz plik odoo-service.yaml i stwórz tam obiekt Service dla Odoo.
# ########
