04/zad2/odoo-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: odooapp
spec:
  #type: NodePort
  selector:
    app: odooapp
  ports:
    - name: http
      protocol: TCP
      port: 80  
      targetPort: 8069
    #  nodePort: 30069
