04/zad2/httproute-odoo.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: passage-route
spec:
  parentRefs:
  - name: eg
  rules:
  - backendRefs:
    - name: odooapp
      port: 80
  - matches:
    - path:
        type: PathPrefix
        value: /
